--- a/src/Md5Reverse.Tests/Md5Reverse.Tests.csproj
+++ b/src/Md5Reverse.Tests/Md5Reverse.Tests.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompareMd5ProvidersTests.cs" />
     <Compile Include="FastUin32HashProviderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
