--- a/src/Md5Reverse.Lib/Md5Reverse.Lib.csproj
+++ b/src/Md5Reverse.Lib/Md5Reverse.Lib.csproj
@@ -41,9 +41,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\IMd5Provider.cs" />
+    <Compile Include="Core\Logger.cs" />
     <Compile Include="FastUin32HashProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StandardHashProvider.cs" />
+    <Compile Include="Utils\FileReaderWriterFactory.cs" />
+    <Compile Include="Utils\StreamSpy.cs" />
+    <Compile Include="Utils\UIntBitArray.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
