--- a/src/Md5Reverse.Console/Md5Reverse.Console.csproj
+++ b/src/Md5Reverse.Console/Md5Reverse.Console.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RainbowTableExperiment.cs" />
     <Compile Include="Uint32ToTiont32AllHashesFileGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
