--- a/src/Md5Reverse.Console/Md5Reverse.Console.csproj
+++ b/src/Md5Reverse.Console/Md5Reverse.Console.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChainsExperiment.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RainbowTableExperiment.cs" />
