--- a/src/Md5Reverse.Console/Md5Reverse.Console.csproj
+++ b/src/Md5Reverse.Console/Md5Reverse.Console.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChainsExperiment.cs" />
+    <Compile Include="IdByHashSearcher.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RainbowTableExperiment.cs" />
