--- a/src/Md5Reverse.Lib/Md5Reverse.Lib.csproj
+++ b/src/Md5Reverse.Lib/Md5Reverse.Lib.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Core\IMd5Provider.cs" />
     <Compile Include="Core\Logger.cs" />
     <Compile Include="FastUin32HashProvider.cs" />
+    <Compile Include="OptimizedHashProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StandardHashProvider.cs" />
     <Compile Include="Utils\FileReaderWriterFactory.cs" />
